--- a/style/style.css
+++ b/style/style.css
@@ -96,7 +96,7 @@ body {
 }
 
 .numeros button:last-child {
-  grid-column: 1 / -1;
+  grid-column: 2 / -1;
 }
 
 .limpador {
@@ -132,12 +132,12 @@ body {
   color: var(--c5);
 }
 
-.js-tela .top {
+/* .js-tela .top {
   font-size: 14px;
   transform: translateY(-30px);
-}
+} */
 
-.l15 {
+/* .l15 {
   font-size: 16px;
 }
 
@@ -151,4 +151,4 @@ body {
 
 .l30 {
   font-size: 8px;
-}
+} */
