--- a/style/style.css
+++ b/style/style.css
@@ -99,6 +99,10 @@ body {
   grid-column: 2 / -1;
 }
 
+.numeros button:hover {
+  background-color: #6dd8da;
+}
+
 .limpador {
   grid-column: 1;
   grid-row: 1;
@@ -119,6 +123,12 @@ body {
   justify-content: center;
 }
 
+.operacoes button:hover,
+.ac:hover {
+  color: #403751;
+  background-color: #6dd8da;
+}
+
 .btn {
   color: var(--c5);
   padding: 3px 17px;
@@ -131,24 +141,3 @@ body {
   background-color: var(--c1);
   color: var(--c5);
 }
-
-/* .js-tela .top {
-  font-size: 14px;
-  transform: translateY(-30px);
-} */
-
-/* .l15 {
-  font-size: 16px;
-}
-
-.l22 {
-  font-size: 14px;
-}
-
-.l26 {
-  font-size: 12px;
-}
-
-.l30 {
-  font-size: 8px;
-} */
